--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <!-- why choose us Start -->
         <section class="why-choose-us">
-            <div class="container-fluid cff">
+            <div class="container-fluid cf">
                 <div class="row">
                     <div class="col-md-6 col-6-pointers">
                         <h4 class="ff text-white">why choose us ?</h4>
@@ -235,8 +235,8 @@
         <section class="testimonial_section">
             <div class="container-fluid cf">
                 <div class="row">
-                    <div class="col-md-6">
-                        <img src="images/image2.png" width="100%">
+                    <div class="col-md-6 text-center">
+                        <img src="images/image2.png" class="test_image">
                     </div>
                     <div class="col-md-6">
                         <h4 class="ff">Testimonial</h4>
@@ -302,8 +302,24 @@
                 </div>
             </div>
         </section>
-
         <!-- Testimonial End -->
+
+        <!-- Video Section Start -->
+
+        <section class="video_section">
+            <div class="container-fluid cf">
+                <div class="row">
+                    <div class="col-md-6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Mmsz8YxZ2TY?si=UqsYSGzg51N_xiPT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                    <div class="col-md-6">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Mmsz8YxZ2TY?si=SCf_HirNX_BKZ6Fm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Video Section End -->
 
         <!-- Factoids Start -->
         <section id="counter_sec">
