--- a/index.html
+++ b/index.html
@@ -309,11 +309,24 @@
         <section class="video_section">
             <div class="container-fluid cf">
                 <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="ff text-center">Touchless Lasik Surgery</h2>
+                        <p class="text-center">(From our experts)</p>
+                    </div>
+                </div>
+                <div class="row mt-4">
                     <div class="col-md-6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Mmsz8YxZ2TY?si=UqsYSGzg51N_xiPT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/Mmsz8YxZ2TY?si=UqsYSGzg51N_xiPT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                     <div class="col-md-6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Mmsz8YxZ2TY?si=SCf_HirNX_BKZ6Fm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/Mmsz8YxZ2TY?si=SCf_HirNX_BKZ6Fm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="row text-center mt-5">
+                    <div class="col-lg-12">
+                        <button class="theme-btn" data-target="#myModal" data-toggle="modal" type="button">
+                            Book Now <i class="fa fa-calendar" aria-hidden="true"></i>
+                        </button>
                     </div>
                 </div>
             </div>
