--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
         <!-- Top Bar Start -->
         <section class="top-bar">
             <div class="container-fluid cf">
-                <div class="row">
-                    <div class="col-md-9 col-xs-6">
+                <div class="d-flex align-items-center justify-content-between">
                         <img src="images/sharpsightlogo.webp" class="logo">
-                    </div>
-                    <div class="col-md-3 col-xs-6 top-bar-buton">
+                
+                    <div class=" top-bar-buton">
                         <button class="theme-btn" data-target="#myModal" data-toggle="modal" type="button">
                             Book Now <i class="fa fa-calendar" aria-hidden="true"></i>
                         </button>
                     </div>
                 </div>
             </div>
+          
         </section>
         <!-- Top Bar End -->
 
@@ -34,9 +34,9 @@
         <section class="banner">
             <div class="container-fluid cf">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="banner-content">
-                            <h4 class="ff text-white">YOUR VISION, OUR PRIORITY</h4>
+                            <h4 class="ff text-white">Your Vision, Our Priority</h4>
                             <h2 class="ff text-white">Book An Appointment For Lasik</h2>
                             <button class="theme-btn" data-target="#myModal" data-toggle="modal" type="button">
                                 Book Now <i class="fa fa-calendar" aria-hidden="true"></i>
@@ -51,16 +51,16 @@
         <!-- Benefit Start -->
         <section class="benefits-section">
             <div class="container-fluid cf">
-                <div class="row">
+                <div class="row g-4">
                     <div class="col-md-6">
                         <h4 class="ff text-white">Benefit</h4>
                         <h2 class="ff text-white">Benefits With Sharp Sight</h2>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 align-self-center">
                         <p class="cr_p">Over the years we have achieved a global reputation of being the best hospital for LASIK laser eye surgery in Delhi-NCR.</p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row g-4 mt-4">
                     <div class="col-md-4">
                         <div class="image-box">
                             <img src="images/surgeons.webp">
@@ -92,8 +92,8 @@
                         <img src="images/image1.png" width="100%">
                     </div>
                     <div class="col-md-6">
-                        <h4>about us</h4>
-                        <h2>We Are A Leading Eye Care Hospital</h2>
+                        <h4 class="ff">About us</h4>
+                        <h2 class="ff">We Are A Leading Eye Care Hospital</h2>
                         <div class="skill_bar">
                             <div class="skill">
                                 <div class="skill-name">Customer Satisfaction</div>
@@ -127,7 +127,7 @@
 
         <!-- why choose us Start -->
         <section class="why-choose-us">
-            <div class="container-fluid cf">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-6 col-6-pointers">
                         <h4 class="ff text-white">why choose us ?</h4>
@@ -154,16 +154,16 @@
         <!-- services Start -->
         <section class="services-section">
             <div class="container-fluid cf">
-                <div class="row">
+                <div class="row ">
                     <div class="col-md-6">
-                        <h4>services</h4>
-                        <h2>We Provide The Best For You</h2>
+                        <h4 class="ff">Services</h4>
+                        <h2 class="ff">We Provide The Best For You</h2>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 align-self-center">
                         <p>We have a team of expert eye surgeons with robust experiences in spectacle removal surgery, skilled paramedics and nursing staff to deliver you the <strong>best LASIK surgery in Delhi NCR</strong> at an affordable cost.<br></p>
                     </div>
                 </div>
-                <div class="row services_row_two">
+                <div class="row mt-4 g-4 services_row_two">
                     <div class="col-md-4">
                         <div class="image-boxx">
                             <img src="images/surgeons.webp">
@@ -195,7 +195,7 @@
 
         <section class="book_now_section">
             <div class="container-fluid cf">
-                <div class="row">
+                <div class="row g-4">
                     <div class="col-md-6">
                         <div class="bookform">
                             <h3>
@@ -234,7 +234,7 @@
         <!-- Testimonial Start -->
         <section class="testimonial_section">
             <div class="container-fluid cf">
-                <div class="row">
+                <div class="row g-4">
                     <div class="col-md-6 text-center">
                         <img src="images/image2.png" class="test_image">
                     </div>
@@ -314,9 +314,9 @@
                         <p class="text-center">(From our experts)</p>
                     </div>
                 </div>
-                <div class="row mt-4">
+                <div class="row g-4 mt-4">
                     <div class="col-md-6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Mmsz8YxZ2TY?si=EJhYgGXbtnMTE2pJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/Mmsz8YxZ2TY?si=EJhYgGXbtnMTE2pJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
                     </div>
                     <div class="col-md-6">
@@ -338,7 +338,7 @@
         <!-- Factoids Start -->
         <section id="counter_sec">
             <div class="container">
-                <div class="row">
+                <div class="row g-4">
                     <div class="col-md-12">
                       <div class="row">
                         <div class="four col-md-3">
@@ -378,7 +378,7 @@
                         </h2>
                     </div>
                 </div>
-                <div class="row mt-4">
+                <div class="row g-4 mt-4">
                     <div class="col-md-4">
                         <div class="image-box">
                             <img src="images/mobile.webp">
