--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <div class="banner-content">
                             <h4 class="ff text-white">Your Vision, Our Priority</h4>
                             <h2 class="ff text-white">Book An Appointment For Lasik</h2>
-                            <button class="theme-btn" data-target="#myModal" data-toggle="modal" type="button">
+                            <button class="theme-btn  mt-4" data-target="#myModal" data-toggle="modal" type="button">
                                 Book Now <i class="fa fa-calendar" aria-hidden="true"></i>
                             </button>
                         </div>
@@ -87,11 +87,11 @@
         <!-- About Us Start -->
         <section class="about-us">
             <div class="container-fluid cf">
-                <div class="row">
+                <div class="row g-4">
                     <div class="col-md-6">
                         <img src="images/image1.png" width="100%">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 align-self-center">
                         <h4 class="ff">About us</h4>
                         <h2 class="ff">We Are A Leading Eye Care Hospital</h2>
                         <div class="skill_bar">
@@ -127,12 +127,12 @@
 
         <!-- why choose us Start -->
         <section class="why-choose-us">
-            <div class="container-fluid">
+            <div class="container-fluid cf">
                 <div class="row">
                     <div class="col-md-6 col-6-pointers">
                         <h4 class="ff text-white">why choose us ?</h4>
                         <h2 class="ff text-white">Better Vision Deserves The Latest Technology</h2>
-                        <ul class="banner_ul_treatment">
+                        <ul class="banner_ul_treatment mb-0">
                           <li class="banner_li">NABH Certified</li>
                           <li class="banner_li">14 World Class Eye Hospitals in India</li>
                           <li class="banner_li">World Class Infrastructure</li>
@@ -238,10 +238,10 @@
                     <div class="col-md-6 text-center">
                         <img src="images/image2.png" class="test_image">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 align-self-center">
                         <h4 class="ff">Testimonial</h4>
                         <h2 class="ff">What They Say About Sharp Sight</h2>
-                        <div class="testimonial-slider">
+                        <div class="testimonial-slider mt-4">
                             <div class="container">
                                 <div id="mycarousel" class="carousel slide" data-bs-ride="carousel">
                                     <div class="carousel-inner">
@@ -340,23 +340,23 @@
             <div class="container">
                 <div class="row g-4">
                     <div class="col-md-12">
-                      <div class="row">
-                        <div class="four col-md-3">
+                      <div class="row g-4">
+                        <div class="four col-md-3 col-sm-6">
                         <div class="counter-box"> <i class="fa fa-smile-o" aria-hidden="true"></i> <span class="counter">500000</span>
                             <p>Eye Surgeries</p>
                         </div>
                     </div>
-                    <div class="four col-md-3">
+                    <div class="four col-md-3 col-sm-6">
                         <div class="counter-box"> <i class="fa fa-hospital-o" aria-hidden="true"></i> <span class="counter">24 </span>
                             <p>Eye Treatments</p>
                         </div>
                     </div>
-                    <div class="four col-md-3">
+                    <div class="four col-md-3 col-sm-6">
                         <div class="counter-box"> <i class="fa fa-home" aria-hidden="true"></i> <span class="counter">50 </span>
                             <p>Doctors</p>
                         </div>
                     </div>
-                    <div class="four col-md-3">
+                    <div class="four col-md-3 col-sm-6">
                         <div class="counter-box"> <i class="fa fa-user"></i> <span class="counter">14</span>
                             <p>Hospitals</p>
                         </div>
@@ -499,19 +499,19 @@
 
         <!-- Footer Start-->
         <footer>
-            <section class="footer">
+            <section class="top-bar">
                 <div class="container-fluid cf">
-                    <div class="row footer_bt">
-                        <div class="col-md-9 col-xs-6 footer_pd0">
+                    <div class="d-flex align-items-center justify-content-between" style="border-top: 2px solid #166836;padding-top: 12px;">
                             <img src="images/sharpsightlogo.webp" class="logo">
-                        </div>
-                        <div class="col-md-3 col-xs-6 top-bar-buton footer_pd0">
+                    
+                        <div class=" top-bar-buton">
                             <button class="theme-btn" data-target="#myModal" data-toggle="modal" type="button">
                                 Book Now <i class="fa fa-calendar" aria-hidden="true"></i>
                             </button>
                         </div>
                     </div>
                 </div>
+              
             </section>
             <section class="copyright">
                 <div class="container-fluid cf">
