--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         <!-- Video Section End -->
 
         <!-- Factoids Start -->
-        <section id="counter_sec">
+        <section id="counter_sec" class="xs-width">
             <div class="container">
                 <div class="row g-4">
                     <div class="col-md-12">
@@ -368,7 +368,7 @@
         </section>
         <!-- Factoids End -->
 
-        <section class="ourapproach">
+        <section class="ourapproach xs-width">
             <div class="container-fluid cf">
                 <div class="row">
                     <div class="col-md-12">
@@ -379,19 +379,19 @@
                     </div>
                 </div>
                 <div class="row g-4 mt-4">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="image-box">
                             <img src="images/mobile.webp">
                             <h3>Make An Appointment</h3>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="image-box">
                             <img src="images/eye.webp">
                             <h3>General Check Up</h3>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="image-box">
                             <img src="images/treatement.webp">
                             <h3>Get Treatment</h3>
