--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <!-- why choose us Start -->
         <section class="why-choose-us">
-            <div class="container-fluid cf">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-6 col-6-pointers">
                         <h4 class="ff text-white">why choose us ?</h4>
@@ -212,8 +212,17 @@
                                     <input class="form-control" id="email_id" name="email_id" placeholder="Enter Email Address" required="" type="email" />
                                 </div>
                                 <div class="form-group">
+                                    <select class="form-select" aria-label="Default select example">
+                                        <option selected>Select City</option>
+                                        <option value="1">Delhi NCR</option>
+                                        <option value="2">Srinagar</option>
+                                       
+                                      </select>
+                                    </div>
+                                <div class="form-group">
                                     <textarea class="form-control" id="cistomer_query" name="customer_query"placeholder="Your Query"></textarea>
                                 </div>
+                              
                                 <button class="btn btn-primary bttn_form" name="submit" type="submit">
                                     Book Now
                                 </button>
