--- a/index.html
+++ b/index.html
@@ -555,6 +555,14 @@
                                 <input class="form-control" id="email_id" name="email_id" placeholder="Enter Email Address" required="" type="email" />
                             </div>
                             <div class="form-group">
+                                <select class="form-select" aria-label="Default select example">
+                                    <option selected>Select City</option>
+                                    <option value="1">Delhi NCR</option>
+                                    <option value="2">Srinagar</option>
+                                   
+                                  </select>
+                                </div>
+                            <div class="form-group">
                                 <textarea class="form-control" id="cistomer_query" name="customer_query"placeholder="Your Query"></textarea>
                             </div>
                             <button class="btn btn-primary bttn_form" name="submit" type="submit">Submit</button>
