--- a/index.html
+++ b/index.html
@@ -261,7 +261,10 @@
                                     placeholder="Enter Mobile No." required="" type="tel" />
                             </div>
                             <div class="form-group">
-                                <select class="form-select" aria-label="Default select example">
+                                <input type="email" name="email_id" class="form-control" id="email_id" placeholder="Enter Email Address" required="">
+                              </div>
+                            <div class="form-group">
+                                <select class="form-select" name="user_city" aria-label="Default select example">
                                     <option selected>Select City</option>
                                     <option value="1">Delhi NCR</option>
                                     <option value="2">Srinagar</option>
@@ -717,9 +720,11 @@
                             <input class="form-control" id="mobile_number" name="mobile_number"
                                 placeholder="Enter Mobile No." required="" type="tel" />
                         </div>
-
                         <div class="form-group">
-                            <select class="form-select" aria-label="Default select example">
+                            <input type="email" name="email_id" class="form-control" id="email_id" placeholder="Enter Email Address" required="">
+                          </div>
+                        <div class="form-group">
+                            <select class="form-select" name="user_city" aria-label="Default select example">
                                 <option selected>Select City</option>
                                 <option value="1">Delhi NCR</option>
                                 <option value="2">Srinagar</option>
