Form values updated

--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
                             <div class="form-group">
                                 <select class="form-select" name="user_city" aria-label="Default select example">
                                     <option selected>Select City</option>
-                                    <option value="1">Delhi NCR</option>
-                                    <option value="2">Srinagar</option>
+                                    <option value="Delhi-NCR">Delhi NCR</option>
+                                    <option value="Srinagar">Srinagar</option>
 
                                 </select>
                             </div>
@@ -726,8 +726,8 @@
                         <div class="form-group">
                             <select class="form-select" name="user_city" aria-label="Default select example">
                                 <option selected>Select City</option>
-                                <option value="1">Delhi NCR</option>
-                                <option value="2">Srinagar</option>
+                                <option value="Delhi-NCR">Delhi NCR</option>
+                                <option value="Srinagar">Srinagar</option>
 
                             </select>
                         </div>
