Thank you page done

--- a/thank-you.html
+++ b/thank-you.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"> -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,32 +25,33 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WNXN593');</script>
 <!-- End Google Tag Manager -->
-    <script>
+    <!-- <script>
          setTimeout(function(){
             window.location.href = 'https://sharpsight.in/';
          }, 12000);
-      </script>
+      </script> -->
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNXN593"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-    <!-- Top Bar Start    -->
-  <section class="nav_bar_section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-xs-6 site_logo">
-          <img src="images/logo.jpg" class="img-fluid web_logo">
-        </div>
-        <div class="col-md-6 col-xs-6 cta_top_bar">
-          <a href="tel:+919641919191" class="theme-btn"><i class="fa fa-phone" aria-hidden="true"></i> 9641-919-191</a>
-        </div>
-      </div>
-    </div>
-  </section>
+    <!-- Top Bar Start -->
+    <section class="top-bar">
+        <div class="container">
+            <div class="d-flex align-items-center justify-content-between">
+                <img src="images/logo-white.jpeg" class="logo">
 
-<!-- Top Bar Ends -->
+                <div class=" top-bar-buton">
+                    <button class="theme-btn" data-target="#myModal" data-toggle="modal" type="button">
+                        Book Now <i class="fa fa-calendar" aria-hidden="true"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- Top Bar End -->
     
     <div class="thank-bg">
   <div class="thank-banner">
