Title Tag updated

--- a/thank-you.html
+++ b/thank-you.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Asap&display=swap" rel="stylesheet">
-    <title>Thank You | Sri Nagar</title>
+    <title>Thank You | Touchless LASIK Surgery in Delhi NCR</title>
     <Meta name="description" content="Searching for 'Eye specialist near me'? Doctors at Sharp Sight Centre will help you with all your eye care needs.  Book an Appointment Now." />
     <Meta name="keywords" content="eye specialist near me, eye care, eye surgeon, eye hospital, eye doctor, best eye hospital" />
     <Meta name="robots" content="noindex, nofollow">
